Fixed cutoff at bottom of page, modified styles

--- a/TextBubbles2/css/text-bubbles.css
+++ b/TextBubbles2/css/text-bubbles.css
@@ -18,7 +18,7 @@ body,
 	width    : 100%;
 	height   : 100%;
 	overflow : hidden;
-	background-color : #eed;
+	background-color : #333;
 }
 
 .wrapper-main {
@@ -30,15 +30,14 @@ body,
 .wrapper-head {
 	height     : 180px;
 	margin-top : -180px;
-	color      : #112;
+	color      : whitesmoke;
 }
 
 .wrapper-head-block {
 	width   : auto;
 	height  : 100%;
 	float   : left;
-	display : inline-block;
-	padding : 8px;
+	padding : 12px;
 }
 
 .wrapper-head-block > textarea {
@@ -48,26 +47,22 @@ body,
 
 /* Body */
 
-.wrapper-body,
-.wrapper-text {
-	width    : 100%;
-	height   : 100%;
-}
-
 .wrapper-body {
+	width  : 100%;
+	height : 100%;
 	overflow         : auto;
-	background-color : #fff;
-	padding-bottom   : 200px;
+	background-color : white;
 }
 
-div.wrapper-text {
-	padding  : 24px;
-	position : relative;
+.wrapper-text {
+	width     : 100%;
+	padding   : 24px;
+	padding-bottom : 200px;
 	display   : flex;
 	flex-wrap : wrap;
 	flex      : 1;
 	justify-content : center;
-	align-items : center;
+	align-items     : center;
 }
 
 /* //// Styling //// */
@@ -76,12 +71,12 @@ div.wrapper-text {
 .wrapper-head-block > hr {
 	margin-bottom : 4px;
 	font-size     : 10pt;
-	border-color  : #112;
+	border-color  : whitesmoke ;
 }
 
 .wrapper-head-block > h1,
 .wrapper-head-block > p {
-	font-family : Verdana, Geneva, sans-serif;
+	font-family : sans-serif;
 }
 
 /* //// Bubbles //// */
@@ -98,24 +93,25 @@ div.wrapper-text {
 }
 
 .word-bubble:hover {
-	border  : 1.5px solid #888;
+	border  : 2px solid dimgray;
 	z-index : 100;
 	box-shadow : inset 200px 200px rgba(0,0,0,.4);
 	display  : inline;
 	position : relative;
 }
 
-/* css tooltips */
+/* CSS Tooltips */
+
 .word-bubble:hover:before {
 	display  : inline-block;
 	position : absolute;
 	top      : 15px;
-	background : rgba(0, 0, 0, 0.8);
+	background    : rgba(0, 0, 0, 0.8);
 	border-radius : 3px;
-	color : whitesmoke;
-	font  : 12px/22px sans-serif;
+	color     : whitesmoke;
+	font      : 12px/22px sans-serif;
 	font-size : smaller;
-	padding : 0 10px;
-	content : attr(data-title);
+	padding   : 0 10px;
+	content   : attr(data-title);
 	white-space : nowrap;
 }
